<?xml version="1.0" encoding="utf-8"?>
<!--
    stocks is client-server program to manage a household's food stock
    Copyright (C) 2019  The stocks developers

    This file is part of the stocks program suite.

    stocks is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    stocks is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/.
-->


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fragment_food_item_options_events"
        android:icon="@drawable/baseline_history_white_24"
        android:orderInCategory="100"
        android:title="@string/title_show_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fragment_food_item_options_shopping"
        android:icon="@drawable/ic_add_shopping_cart_white_24"
        android:orderInCategory="100"
        android:title="@string/title_add_to_cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fragment_food_item_options_ean"
        android:icon="@drawable/ic_photo_camera_white_24dp"
        android:orderInCategory="100"
        android:title="@string/title_barcode"
        app:showAsAction="never" />
    <item
        android:id="@+id/fragment_food_item_options_expiration_offset"
        android:icon="@drawable/ic_timelapse_white_24"
        android:orderInCategory="100"
        android:title="@string/title_expiration_offset"
        app:showAsAction="never" />
    <item
        android:id="@+id/fragment_food_item_options_location"
        android:orderInCategory="100"
        android:title="@string/title_location"
        app:showAsAction="never" />
    <item
        android:id="@+id/fragment_food_item_options_charts"
        android:orderInCategory="100"
        android:title="@string/title_charts"
        app:showAsAction="never" />

</menu>
