<?xml version="1.0" encoding="UTF-8"?>
<!--
    stocks is client-server program to manage a household's food stock
    Copyright (C) 2019  The stocks developers

    This file is part of the stocks program suite.

    stocks is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    stocks is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    style="@style/StocksTheme.Activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/fragment_principals_user_name"
        style="@style/StocksTheme.EditText"
        android:layout_alignParentTop="true"
        android:hint="@string/hint_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/fragment_principals_device_name"
        style="@style/StocksTheme.EditText"
        android:layout_below="@id/fragment_principals_user_name"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_device_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/fragment_principals_user_id"
        style="@style/StocksTheme.EditText"
        android:layout_below="@id/fragment_principals_device_name"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/hint_user_id"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/fragment_principals_device_id"
        style="@style/StocksTheme.EditText"
        android:layout_below="@id/fragment_principals_user_id"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/hint_device_id"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/fragment_principals_fingerprint"
        style="@style/StocksTheme.EditText"
        android:layout_below="@id/fragment_principals_device_id"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_fingerprint"
        android:inputType="text" />

    <EditText
        android:id="@+id/fragment_principals_ticket"
        style="@style/StocksTheme.EditText"
        android:layout_below="@id/fragment_principals_fingerprint"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_ticket"
        android:inputType="text" />

    <Button
        android:id="@+id/fragment_principals_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_principals_ticket"
        android:layout_alignEnd="@id/fragment_principals_ticket"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:text="@android:string/ok" />
</RelativeLayout>
