<?xml version="1.0" encoding="UTF-8"?><!--
    stocks is client-server program to manage a household's food stock
    Copyright (C) 2019  The stocks developers

    This file is part of the stocks program suite.

    stocks is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    stocks is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:id="@+id/fragment_outline_content_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_outline_content_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#33000000"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/desc_cutlery"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_local_dining_black_24dp" />

                <TextView
                    style="@style/StocksTheme.TextLarge"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/action_eat_next" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_outline_content_cardview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#33000000"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_supermarket"
                android:padding="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_store_black_24dp" />

            <TextView
                style="@style/StocksTheme.TextLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:text="@string/action_missing_food" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        style="@style/StocksTheme.TextLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/title_recent_activity"
        android:textAlignment="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_outline_content_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

</LinearLayout>
